@startuml
title ゲームの用語辞典サイト

entity User {
  + user_id : int
  --
  name : string
  email : string
  password_digest : string

  has_secure_password
  has_many :article
}

entity Article {
  + article_id : int
  --
  title : string
  category : string
  description : text
  updated_at : date

  belong_to user
  has_many : comment
}

entity Comment {
  + comment_id : int
  --
  comment_number : int
  body : text

  belong_to user
  belong_to article
}



User ||--o{ Article
Article ||--o{ Comment
User ||--o{ Comment

@enduml